plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '1.0.21'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
	maven { url "https://www.cursemaven.com" }
	maven { url "https://dvs1.progwml6.com/files/maven/" }
	maven { url "https://modmaven.k-4u.nl" }
	maven { url "https://maven.tterrag.com/" }
	maven { url 'https://www.jitpack.io' }
	maven { url "https://maven.ryanliptak.com/" }
	maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven { url = "https://mvn.devos.one/snapshots" } // Registrate
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven" } 
    maven { url = "https://maven.theillusivec4.top/" } 
    maven { url = "https://maven.blamejared.com/" }
	flatDir { dirs '../Imports' }
}

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users starting in 1.20.5, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
     compileOnly "mezz.jei:jei-1.21.1-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-1.21.1-neoforge-api:${jei_version}"
    // at runtime, use the full JEI jar for Forge
    localRuntime "mezz.jei:jei-1.21.1-neoforge:${jei_version}"
    //localRuntime "curse.maven:sodium-394468:6382651"
    //localRuntime "curse.maven:irisshaders-455508:6661598"
    
    //implementation('com.blamejared.crafttweaker:CraftTweaker-neoforge-1.21.1:21.0.27')
	//implementation "curse.maven:enchanted-witchcraft-560363:6948369"
	//implementation "curse.maven:ars-nouveau-401955:7417840"
	//implementation "curse.maven:dawn-of-time-312359:7049993"
	//implementation "curse.maven:lendercataclysm-551586:6906997"
	//implementation "curse.maven:hazen-n-stuff-1231627:7163343"
	//implementation "curse.maven:silent-lib-242998:6565251"
	//implementation "curse.maven:abyssal-decor-964853:6768929"
	//implementation "curse.maven:extradelight-842106:7321020"
	//implementation "curse.maven:lets-do-bloomingnature-962885:7431040"
	//implementation "curse.maven:koopas-critters-395061:7378564"
	//implementation "curse.maven:cluttered-826308:7385620"
	//implementation "curse.maven:butchercraft-265715:6714774"
	//implementation "curse.maven:stateobserver-701213:7357057"
	//implementation "curse.maven:modopedia-1132038:6765935"
	//implementation "curse.maven:geckolib-388172:7415496"
	//implementation "curse.maven:curios-309927:6529130"
	//implementation "curse.maven:farmers-delight-398521:6917256"
	//implementation "curse.maven:irons-spells-n-spellbooks-855414:7402503"
	//implementation "curse.maven:architectury-api-419699:5786327"
	//implementation "curse.maven:silent-gear-297039:7254991"
	//implementation "curse.maven:playeranimator-658587:7389814"
	//implementation "curse.maven:biolith-852512:7074761"
	//implementation "curse.maven:lionfish-api-1001614:6168249"
	//implementation "curse.maven:aces-spell-utils-1299492:7382269"
	//implementation "curse.maven:apothic-attributes-898963:6751650"
	//implementation "curse.maven:placebo-283644:6926281"
	//implementation "curse.maven:azurelib-817423:7371539"
	//implementation "curse.maven:create-328085:7408951"
    //implementation("xyz.brassgoggledcoders:PatchouliProvider:1.21.1-1.0.11-Snapshot.5")
    //implementation "curse.maven:dyenamics-509276:7138991"
	
	compileOnly "vazkii.patchouli:Patchouli:1.21-87-NEOFORGE:api"
    runtimeOnly "vazkii.patchouli:Patchouli:1.21-87-NEOFORGE"
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
